# sleephq-client

./: .gitignore  README.md  fix-spec.jq  generate.sh  openapi-config.yaml  pyproject.toml
docs/: ActiveStorageApi.md  ApiV1DeviceSerializer.md  ApiV1DeviceSerializerData.md  ApiV1DeviceSerializerDataAttributes.md  ApiV1DeviceSerializerList.md  ApiV1ImportSerializer.md  ApiV1ImportSerializerData.md  ApiV1ImportSerializerDataAttributes.md  ApiV1ImportSerializerDataRelationships.md  ApiV1ImportSerializerList.md  ApiV1ImportsFileSerializer.md  ApiV1ImportsFileSerializerData.md  ApiV1ImportsFileSerializerDataAttributes.md  ApiV1ImportsFileSerializerList.md  ApiV1JournalSerializer.md  ApiV1JournalSerializerData.md  ApiV1JournalSerializerDataAttributes.md  ApiV1JournalSerializerList.md  ApiV1MachineDateSerializer.md  ApiV1MachineDateSerializerData.md  ApiV1MachineDateSerializerDataAttributes.md  ApiV1MachineDateSerializerList.md  ApiV1MachineSerializer.md  ApiV1MachineSerializerData.md  ApiV1MachineSerializerDataAttributes.md  ApiV1MachineSerializerList.md  ApiV1PatientSerializer.md  ApiV1PatientSerializerData.md  ApiV1PatientSerializerDataAttributes.md  ApiV1PatientSerializerDataRelationships.md  ApiV1PatientSerializerList.md  ApiV1TeamSerializer.md  ApiV1TeamSerializerData.md  ApiV1TeamSerializerDataAttributes.md  ApiV1TeamSerializerList.md  ApiV1UserSerializer.md  ApiV1UserSerializerData.md  ApiV1UserSerializerDataAttributes.md  ApiV1UserSerializerDataRelationships.md  ApiV1UserSerializerDataRelationshipsTeams.md  (+20 more)
extras/: auth.py
tests/: test_active_storage_api.py  (+59 more)
(+187 files in other folders)
