[project]
name = "sleephq-client"
version = "0.1.0"
description = "Python SDK for the SleepHQ API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "urllib3>=2.1.0,<3.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2",
    "typing-extensions>=4.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sleephq"]

[dependency-groups]
dev = ["pytest>=7", "mypy>=1.0"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]
